openjdk8: enable build for armhf

--- a/community/openjdk8/APKBUILD
+++ b/community/openjdk8/APKBUILD
@@ -9,7 +9,7 @@ pkgver=$_java_ver.$_jdk_update.$_jdk_build
 pkgrel=0
 pkgdesc="Sun OpenJDK 8"
 url="http://openjdk.java.net"
-arch="x86_64 x86"
+arch="all"
 license="custom"
 depends="$pkgname-jre java-cacerts"
 options="sover-namecheck"
