--- a/community/openjdk8/APKBUILD
+++ b/community/openjdk8/APKBUILD
@@ -13,7 +13,7 @@ arch="all"
 license="custom"
 depends="$pkgname-jre java-cacerts"
 options="sover-namecheck"
-makedepends="bash findutils tar zip file paxmark gawk util-linux libxslt
+makedepends="bash findutils tar zip file gawk util-linux libxslt
 	autoconf automake linux-headers sed
 	openjdk7 ca-certificates
 	nss-dev cups-dev jpeg-dev giflib-dev libpng-dev libxt-dev
@@ -121,22 +121,6 @@ build() {
 	make images || return 1
 }
 
-list_paxables() {
-	file "$@" 2> /dev/null \
-		| grep -E 'ELF.*(executable|shared object)' | sed -e 's/: .*$//'
-}
-
-pax_mark_vm() {
-	local paxflags="-mp"
-	[ "$CARCH" = "x86" ] && paxflags="-msp"
-
-	local paxable
-	for paxable in $(list_paxables "${1}"/bin/* "${1}"/jre/bin/*); do
-		echo "PaX mark $paxflags ${paxable}"
-		paxmark $paxflags "${paxable}"
-	done
-}
-
 package() {
 	mkdir -p "$pkgdir"/$INSTALL_BASE
 	cp -a "$builddir"/build/*/images/j2sdk-image/* "$pkgdir"/$INSTALL_BASE || return 1
@@ -144,8 +128,6 @@ package() {
 
 	find "$pkgdir"/$INSTALL_BASE -iname "*.diz" -delete || return 1
 	find "$pkgdir"/$INSTALL_BASE -iname "*.debuginfo" -delete || return 1
-
-	pax_mark_vm "$pkgdir"/$INSTALL_BASE
 
 	# symlink to shared java cacerts store
 	rm -f "$pkgdir"/$INSTALL_BASE/jre/lib/security/cacerts
@@ -184,8 +166,6 @@ jrebase() {
 
 	# rest of the jre subdir (which were not taken by -jre subpkg)
 	mv "$pkgdir"/$INSTALL_BASE/jre "$subpkgdir"/$INSTALL_BASE || return 1
-
-	pax_mark_vm "$subpkgdir"/$INSTALL_BASE
 }
 
 jre() {
@@ -204,8 +184,6 @@ jre() {
 		mkdir -p "$subpkgdir"/$INSTALL_BASE/$dirname
 		mv "$pkgdir"/$INSTALL_BASE/$A "$subpkgdir"/$INSTALL_BASE/$dirname || return 1
 	done
-
-	pax_mark_vm "$subpkgdir"/$INSTALL_BASE
 }
 
 doc() {
