decrease java max heap

--- a/community/openjdk8/APKBUILD
+++ b/community/openjdk8/APKBUILD
@@ -63,6 +63,8 @@ source="http://icedtea.classpath.org/download/source/icedtea-$_icedteaver.tar.gz
 	icedtea-jdk-musl.patch
 	icedtea-jdk-includes.patch
 	icedtea-autoconf-config.patch
+	icedtea-autoconf-arm-max-heap.patch
+	decrease-max-heap.patch
 	"
 builddir="$srcdir/icedtea-$_icedteaver"
 
@@ -257,7 +259,8 @@ bdea7060a067faf1c2de5f4eb6e8525d  icedtea-jdk-execinfo.patch
 b708c7630efb0b0fe7bb3eca58cb1629  icedtea-jdk-musl.patch
 da4b0b67d9b5c7f742bcea70722acd94  icedtea-jdk-includes.patch
 d13bf1213635a702611af295d3977fe1  icedtea-autoconf-config.patch
-84ded2d18b443c6fd5f20aa7eacdceba  raspberry-max-heap.patch"
+5acd674a23146a1d9984c17a157a720a  icedtea-autoconf-arm-max-heap.patch
+8d0a758c5ded8095668bb76984518a36  decrease-max-heap.patch"
 sha256sums="88cc563d5cf4d7d0e8a394800ba580c922c5703dded4922551eb1a2425010b86  icedtea-3.2.0.tar.gz
 6c1040b4044efdd0c413d15865304f1ac46230d91435a31347a7b755e91e7924  openjdk-3.2.0.tar.xz
 902607987e26c67489f01fe8cf693fbbbd5850f3b9b06ff12af5486b75822387  corba-3.2.0.tar.xz
@@ -276,7 +279,8 @@ c0f7e07293883142d7d7776c9e43a3bba7d45e4abbce6dc0fb531d25ed836ed4  icedtea-jdk-fi
 749f9a5644253caaa0dc5b1d3ee31ed61e1392fdd127d6c68eef367902fe834c  icedtea-jdk-musl.patch
 8f4edc784fd70b27f91a0acf05a1de19fc300a35852b74668332ed747ec52073  icedtea-jdk-includes.patch
 51ced4c77b97744fd0ecfbeca3f94e2da1fc5072dac7830c141f70887c503c33  icedtea-autoconf-config.patch
-df2c255c5710b861d837e089426676cb278ccec1909b082124d3e7c165486519  raspberry-max-heap.patch"
+b4e7a94cf9eba39088b5fd895a6dd0373bf14757f9c294c008d34851befc949a  icedtea-autoconf-arm-max-heap.patch
+c0afdc36cd4469dda6d7d0a1a905ac31bbad9b8376c1cf965dd2ea7fb3769e09  decrease-max-heap.patch"
 sha512sums="e0be02d37f76586616b68fa4f1a93f3d098d2f1fa3dcd8a1294579ce4c79e0002e7673c90a328e153869996392e6ad8a208379f42c05d225e489d8f838601abb  icedtea-3.2.0.tar.gz
 89a3d39afcd6a7a1c8c55d0b7aa1a4c3d87878cf97ffe96fe13fe014edb28588cd8505281ba127eb6275b3639bbdc28593cdbf8cd56e4b033fa83c75c48b0029  openjdk-3.2.0.tar.xz
 b66f13f3f65085857bbdfb37d4d05a872a4cdb115394787365c8b4f67a70b95df4c66702b930fb6ec637e9f5065e21283df344127d618477d3e1beca7b9d047a  corba-3.2.0.tar.xz
@@ -295,4 +299,5 @@ b135991c76b0db8fa7c363e0903624668e11eda7b54a943035c214aa4d7fc8c3e8110ed200edcec8
 dc41a132e310101dfdd0d3e17eba8a53acb67392ab0d16cf09d24084ab467921a9ebfa33cde0e4e63e65c55ce7edcaf12edee10eea66e37b12ac9dba0419ac61  icedtea-jdk-musl.patch
 c6caaa69a75dfcf922f7a700a4c780568ead18e8774b9df2c1d86d1ab9f5a21c239952c4053f0f839b4255c0da69d2f42cdd87637db7cf5333076872f63580e0  icedtea-jdk-includes.patch
 662d662d0a7a84be2978e921317589f212f3ba3b7629527ba0f1140b5ac4c1024893e0ed176211688ed1a4505968c4befc841ed57ffcdbb9d355c2cb0571b167  icedtea-autoconf-config.patch
-2774ff6f5279b64da3b74b6fbdfe5ace6bd35c79fdb2f44a1bf695c64b20c7ff257ae32a684d3ec58cce91d4dc8c08b89ee07fd14c77d2a186120c038ee7ee6e  raspberry-max-heap.patch"
+cb3925981de28fc7e5850ddf45c66762918af403bd4161cc45a6462adeabe8f47f74b31b1e22016bbe1c8fce131d5cb0c63047c968ec6aef759c212116cafebb  icedtea-autoconf-arm-max-heap.patch
+5bd00ee6ea59425834a9289b33c6687e5950463b00120409149a1c1f7d12616bec6793b697914e26f387ef3da57ec5b9aedca40f5a4ad98e7349310f3405ea67  decrease-max-heap.patch"
